Update and rename 2024-27-01-clooney.md to 2024-27-01-cfj.md

--- a/_posts/2024-27-01-cfj.md
+++ b/_posts/2024-27-01-cfj.md
@@ -3,6 +3,7 @@ layout: category-post
 title:  "Clooney Foundation for Justice Fairness Report on the case of Academic for Peace Tuna Altınel"
 date:   2016-08-05 20:20:56 -0400
 categories: works
+img: cfj.jpg
 ---
 
 [Clooney Foundation for Justice](https://cfj.org), co-founded by the accomplished human rights lawyer Amal Clooney with her husband, George Clooney, in 2016, provides free legal support to victims of human rights abuses in over 40 countries, and through their [TrialWatch](https://cfj.org/trialwatch/) initiative launched in 2019, CFJ *"monitors criminal trials worldwide, provides free legal support to get innocent people out of prison, and advocates for the reform of unfair laws."*
